fix text selection on IE10

--- a/src/main.css
+++ b/src/main.css
@@ -47,6 +47,8 @@ dateinput-picker {
 
         /* disable text selection */
         &::selection {
+            /* specify color to hide selection on IE10 */
+            color: rgba(0, 0, 0, 0.01);
             background: none;
         }
 
